fix wrap issue on size

--- a/sass/custom-theme.scss
+++ b/sass/custom-theme.scss
@@ -324,6 +324,7 @@ h1, h2, h3, h4, h5, h6 {
                 position: absolute;
                 min-width: 40px;
                 text-align: center;
+                white-space: nowrap;
                 &:after {
                     content:attr(data-size);
                     display: none;
